# medium-graphql-backend

./: .gitignore  manage.py  pyproject.toml  readme.md  schema.graphql  scripts.py
articles/: dataloaders.py  filters.py  models.py  queries.py  types.py
articles/migrations/: 0001_initial.py  0002_alter_article_author.py  0003_alter_article_slug.py  0004_favoritearticles.py  0005_alter_favoritearticles_unique_together.py
articles/mutations/: article_mutations.py  comment_mutations.py
core/: admin.py  models.py  mutations.py  schema.py  views.py
core/templates/: playground.html
medium/: asgi.py  settings.py  urls.py  wsgi.py
tests/: client.py  conftest.py  factories.py
tests/test_users/: test_users_mutations.py
users/: managers.py  models.py  mutations.py  queries.py  types.py
users/migrations/: 0001_initial.py
